Fix Database Closing during inspection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BIGNO, AARON</string>
+    <string name="app_name">ESTAVILLA, HAGGAI P.</string>
     <string-array name="year_lvl">
         <item>1</item>
         <item>2</item>
